fix: text contrast improved

--- a/src/styles/components/partner.pcss
+++ b/src/styles/components/partner.pcss
@@ -1,5 +1,5 @@
 .partner-title {
   margin-top: 40px;
   font-size: 18px;
-  color: var(--color-white);
+  color: var(--color-dark-slate-blue);
 }
